# it-jobs-aggregator

./: Cargo.toml  Dockerfile  Makefile  README.org  Rocket.toml
client/: package-lock.json  package.json  rollup.config.js
client/public/: global.css  index.html
client/src/: App.svelte  store.ts
db/: db.sqlite
db/migrations/20210620150332_update_posts_table/: down.sql  up.sql
src/: api.rs  db.rs  main.rs
