[package]
name = "it-jobs-aggregator"
version = "0.1.0"
authors = ["Thai Vu <thai.vh@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
select = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
csv-async = {version = "1.1", features = ["tokio"]}
rocket = "0.5.0-rc.1"
