[package]
name = "it-jobs-aggregator"
version = "0.1.0"
authors = ["Thai Vu <thai.vh@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.7", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-dev"
default-features = false
features = ["diesel_sqlite_pool", "sqlite_pool"]